[gd_scene load_steps=3 format=3 uid="uid://b0s4csym8bf2n"]

[ext_resource type="PackedScene" uid="uid://bm8gdov5dr8pg" path="res://scenes/components/component/component.tscn" id="1_gcoof"]
[ext_resource type="Script" uid="uid://cg284o17xf1nx" path="res://scenes/components/health_component/health_component.gd" id="2_hkwdx"]

[node name="HealthComponent" instance=ExtResource("1_gcoof")]
script = ExtResource("2_hkwdx")
health = 0
max_health = 0
invulnerability_time = 0.0
health_replenish_is_enabled = true
invulnerability_is_enabled = false

[node name="Timers" type="Node" parent="." index="0"]

[node name="InvulnerabilityTimer" type="Timer" parent="Timers" index="0"]
unique_name_in_owner = true

[connection signal="timeout" from="Timers/InvulnerabilityTimer" to="." method="_on_invulnerability_timer_timeout"]
